[gd_scene load_steps=4 format=2]

[ext_resource path="res://examples/scenes/detailed_scene_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://examples/scenes/leaderboard.gd" type="Script" id=2]
[ext_resource path="res://examples/fonts/default_font.tres" type="FontFile" id=3]

[node name="Leaderboard" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="." index="1"]
anchor_right = 1.0
offset_left = 20.0
offset_top = 90.0
offset_right = -20.0
offset_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2" index="0"]
offset_right = 920.0
offset_bottom = 430.0
theme_override_constants/separation = 20

[node name="IsLeaderboardSupported" type="Label" parent="MarginContainer2/VBoxContainer" index="0"]
offset_right = 920.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource( 3 )
text = "Is Leaderboard Supported:"

[node name="PlayerScore" type="Label" parent="MarginContainer2/VBoxContainer" index="1"]
offset_top = 48.0
offset_right = 920.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource( 3 )
text = "Player Score: 0"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer" index="2"]
offset_top = 96.0
offset_right = 920.0
offset_bottom = 146.0
theme_override_constants/separation = 20

[node name="IncrementPlayerScoreButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer" index="0"]
offset_right = 228.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 0, 50 )
theme_override_fonts/font = ExtResource( 3 )
text = "Increment Player Score"

[node name="GetPlayerScoreButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer" index="1"]
offset_left = 248.0
offset_right = 412.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 0, 50 )
theme_override_fonts/font = ExtResource( 3 )
text = "Get Player Score"

[node name="GetEntriesButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer" index="2"]
offset_left = 432.0
offset_right = 546.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 0, 50 )
theme_override_fonts/font = ExtResource( 3 )
text = "Get Entries"

[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/IncrementPlayerScoreButton" to="." method="_on_increment_player_score_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/GetPlayerScoreButton" to="." method="_on_get_player_score_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/GetEntriesButton" to="." method="_on_get_entries_button_pressed"]
